--- a/templates/confabulation/storyView.html
+++ b/templates/confabulation/storyView.html
@@ -44,8 +44,8 @@
 
 <h3>Photos</h3>
 {% for photo in photos %}
-{{ photo.name }}
-<img src={{ photo.file_url }} >
+<a href={{photo.url}}>{{ photo.name }} <br>
+<img width=100 src={{ photo.url }} ></a>
 {% endfor %}
 
 {% endblock %}
