fix link in story list in participantView

--- a/templates/confabulation/participantView.html
+++ b/templates/confabulation/participantView.html
@@ -15,7 +15,7 @@
 <ul>
     {% for s in stories %}
     <li>
-        <a href ="/story/{{ s.id }}">{{ s.name }} </a></li>
+        <a href ="/story/{{ s.id }}/">{{ s.name }} </a></li>
     {% endfor %}
 </ul>
 {% endif %}
