--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -6,6 +6,7 @@
 
 <h2>Szia Bözsike,</h2>
 
+<div class="body_text">
 <p>
 ez itten egy placeholder, majd itt lesznek dolgok. Amint látod, ez egy olyan aoldal, ami jelszóval van védve. Az adatbázisod privát.
 </p>
@@ -18,5 +19,5 @@ ez itten egy placeholder, majd itt lesznek dolgok. Amint látod, ez egy olyan ao
     <a href="/story/">Stories</a>
 
 </p>
-
+</div>
 {% endblock %}
