--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -6,7 +6,7 @@
 
 <h2>Szia Bözsike,</h2>
 
-<div class="body_text">
+<div class="body_text" id="front_body">
 <p>
 ez itten egy placeholder, majd itt lesznek dolgok. Amint látod, ez egy olyan aoldal, ami jelszóval van védve. Az adatbázisod privát.
 </p>
