analysis views tested
And so is their usage in stories

--- a/templates/confabulation/analysisTypeView.html
+++ b/templates/confabulation/analysisTypeView.html
@@ -15,7 +15,7 @@
     <div>
         <ul>
     {% for ap in analysis_points %}
-            <li><a href="/analysis/{{ap.id}}">{{ap.name}}</a></li>
+            <li><a href="/analysis/{{ap.id}}/">{{ap.name}}</a></li>
 {% endfor %}
         </ul>
 </div>
