--- a/templates/confabulation/analysisView.html
+++ b/templates/confabulation/analysisView.html
@@ -9,7 +9,7 @@
     <h1> <font color="{{analysis_point.color_code}}">{{analysis_point.name}}</font> </h1>
 
     Analysis Type:
-    <a href="/analysis_type/{{analysis_point.analysis_type.id}}">        {{analysis_point.analysis_type.name}}</a>
+    <a href="/analysis_type/{{analysis_point.analysis_type.id}}/">        {{analysis_point.analysis_type.name}}</a>
 <div class="description">
     {{analysis_point.description}}
 </div>
