fix tooltip for analysis

--- a/templates/confabulation/storyView.html
+++ b/templates/confabulation/storyView.html
@@ -31,7 +31,7 @@ Keywords:
 <ul>
     {% for a in analysis %}
     <li>
-        <a href="/analysis/{{a.id}}/" data-toggle="tooltip" data-placement="right" title={{ad.description}}>       <font color="{{a.color_code}}">{{a.name}}</font></a>
+        <a href="/analysis/{{a.id}}/" data-toggle="tooltip" data-placement="right" title={{a.description}}>       <font color="{{a.color_code}}">{{a.name}}</font></a>
     </li>
     {% endfor %}
 </ul>
