--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -4,10 +4,13 @@
                 <a href="/" aria-expanded="false">Home</a>
             </li>
             <li>
-                <a href="#">About</a>
+                <a href="/about">About</a>
             </li>
             <li>
-                <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Pages</a>
+                <a href="/Author">Author</a>
+            </li>
+            <li>
+                <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Participants</a>
                 <ul class="collapse list-unstyled" id="pageSubmenu">
                     <li>
                         <a href="#">Page 1</a>
@@ -19,12 +22,6 @@
                         <a href="#">Page 3</a>
                     </li>
                 </ul>
-            </li>
-            <li>
-                <a href="#">Portfolio</a>
-            </li>
-            <li>
-                <a href="#">Contact</a>
             </li>
         </ul>
 {% endblock %}
