participant list in the sidebar
and a bunch of small changes that make the front page look much better.

--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -6,14 +6,16 @@
 <div class="body_text" id="front_body">
     <h1>Welcome</h1>
 
-<p>This website is a visual representation of the PhD research work of <a href="/author">Eszter Biro</a>. You can read <a href="/about"> about the research here</>, and you can read the entire thesis work <a href="">here</a> </p>
+<p>This website is a visual representation of the PhD research work of <a href="/author">Eszter Biro</a>. You can read <a href="/about"> about the research here</a>, and you can read the entire thesis work <a href="">here</a> </p>
+<p>
+    Or you can just start browsing.
+    <h3><a href="/participant/">Participants</a></h3>
+    <h3><a href="/story/">Stories</a></h3>
+</p>
 
-  Or you can just start browsing. 
-    <a href="/participant/">Participants</a>
-    <a href="/story/">Stories</a>
-
+<p>
 If you are Eszter, then a link to the <a href="/admin/"> admin page </a> migth be useful. 
-
+</p>
 </p>
 </div>
 {% endblock %}
