--- a/confabulation/staticfiles/mystyles.css
+++ b/confabulation/staticfiles/mystyles.css
@@ -17,3 +17,32 @@
     max-width: 250px;
     min-height: 100vh;
 }
+
+#sidebar .sidebar-header {
+    padding: 20px;
+}
+
+#sidebar ul.components {
+    padding: 20px 0;
+    border-bottom: 1px solid ;
+}
+
+#sidebar ul p {
+    padding: 10px;
+}
+
+#sidebar ul li a {
+    padding: 10px;
+    font-size: 1.1em;
+    display: block;
+}
+#sidebar ul li a:hover {
+    background: #fff;
+}
+
+#sidebar ul li.active > a, a[aria-expanded="true"] {
+}
+ul ul a {
+    font-size: 0.9em !important;
+    padding-left: 30px !important;
+}
