--- a/templates/base.html
+++ b/templates/base.html
@@ -26,21 +26,22 @@
                 {% endblock %}
             </nav>
             <div class="container" id="block-content">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <div class="container-fluid">
-
-                        <button type="button" id="sidebarCollapse" class="btn btn-info">
-                            <i class="fas fa-align-left"></i>
-                            <span>Hide sidebar</span>
-                        </button>
-                    </div>
-                </nav>
                 <div class="row">
                     <div class="col-md-8">
                         {% block content %}
                         {% endblock %}
                     </div>
-                </div>            </div>
+                </div>
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <div class="container-fluid">
+                        <button type="button" id="sidebarCollapse" class="btn btn-info btn-sm">
+                            <i class="fas fa-align-left"></i>
+                            <span>Hide sidebar</span>
+                        </button>
+                    </div>
+                </nav>
+
+            </div><!-- block-content>
         </div>
     </body>
 </html>
