--- a/templates/author.html
+++ b/templates/author.html
@@ -2,19 +2,25 @@
 
 
 {% block content %}
-{% block title %}
-<h1>Eszter Biro</h1>
-{% endblock %}
+{% block title %} <h1>Eszter Biro</h1>{% endblock %}
+
 A flattering headshot
 
-<div>
-<h3><About</h3>
-<p>Short biography</p>
+<div class="body_text">
+    <div>
+        <h3><About</h3>
+            Short biography
+    </div>
+    <div>
+        <h3>Works</h3>
 
-<h3>Works</h3>
-<p>links to previous work</p>
+        links to previous work
 
-<h3>Contact</h3>
-<p>contact info</p>
+    </div>
+    <div>
+        <h3>Contact</h3>
+
+        contact info
+    </div>
 </div>
 {% endblock %}
