--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -7,7 +7,7 @@
                 <a href="/about">About</a>
             </li>
             <li>
-                <a href="/Author">Author</a>
+                <a href="/author">Author</a>
             </li>
             <li>
 
