--- a/templates/base.html
+++ b/templates/base.html
@@ -1,22 +1,47 @@
 {% load staticfiles %}
+<!doctype html>
 <html>
     <head>
         <title>Story Telling Database</title>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="stylesheet" href={% static 'mystyles.css'%} type='text/css'>
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-        </head>
-        <body>
-            <div class="page-header">
-                <h1><a href="/">Story Telling Database</a></h1>
-            </div>
-            <div class="content container">
+    </head>
+    <body>
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <script src={% static 'mystyles.js' %}></script>
+        <div class="container" id="page-header">
+            <h1><a href="/">Story Telling Database</a></h1>
+        </div>
+        <div class="wrapper">
+            <nav id="sidebar">
+                {% block sidebar %}
+                {% include "sidebar.html" %}
+                {% endblock %}
+            </nav>
+            <div class="container" id="block-content">
                 <div class="row">
                     <div class="col-md-8">
                         {% block content %}
                         {% endblock %}
-            </div>
+                    </div>
+                </div>
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <div class="container-fluid">
+                        <button type="button" id="sidebarCollapse" class="btn btn-info btn-sm">
+                            <i class="fas fa-align-left"></i>
+                            <span>Hide sidebar</span>
+                        </button>
+                    </div>
+                </nav>
+
+            </div><!-- block-content>
         </div>
-    </div>
-</body>
+    </body>
 </html>
