--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -1,23 +1,21 @@
 {% extends 'base.html' %}
 
-{% block title %}Frontpage{% endblock %}
+{% block title %}Story Telling Database{% endblock %}
 
 {% block content %}
-
-<h2>Szia Bözsike,</h2>
-
 <div class="body_text" id="front_body">
+    <h1>Welcome</h1>
+
+<p>This website is a visual representation of the PhD research work of <a href="/author">Eszter Biro</a>. You can read <a href="/about"> about the research here</a>, and you can read the entire thesis work <a href="">here</a> </p>
 <p>
-ez itten egy placeholder, majd itt lesznek dolgok. Amint látod, ez egy olyan aoldal, ami jelszóval van védve. Az adatbázisod privát.
+    Or you can just start browsing.
+    <h3><a href="/participant/">Participants</a></h3>
+    <h3><a href="/story/">Stories</a></h3>
 </p>
+
 <p>
-    Már vannak táblák az adatbázisban, lehete bele adatot bevinni. Egyelőre egy értelmes sor sincs benne, még csak próbálgatom.
-    Te is tudod próbálgatni, ha elmész az <a href="/admin/">admin felületre.</a></p> 
-
-<p>már csináltam ár oldalt:<br>
-    <a href="/participant/">Participants</a>
-    <a href="/story/">Stories</a>
-
+If you are Eszter, then a link to the <a href="/admin/"> admin page </a> migth be useful. 
+</p>
 </p>
 </div>
 {% endblock %}
