--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
         <script src={% static 'mystyles.js' %}></script>
         <div class="container" id="page-header">
             <h1><a href="/">Story Telling Database</a></h1>
+            {% block navigation %}{% endblock %}
         </div>
         <div class="wrapper">
             <nav id="sidebar">
@@ -32,16 +33,17 @@
                         {% endblock %}
                     </div>
                 </div>
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <div class="container-fluid">
-                        <button type="button" id="sidebarCollapse" class="btn btn-info btn-sm">
-                            <i class="fas fa-align-left"></i>
-                            <span>Hide sidebar</span>
-                        </button>
-                    </div>
-                </nav>
 
-            </div><!-- block-content>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                    <button type="button" id="sidebarCollapse" class="btn btn-info btn-sm">
+                        <i class="fas fa-align-left"></i>
+                        <span>Hide sidebar</span>
+                    </button>
+                </div>
+            </nav>
+
+        </div><!-- block-content>
         </div>
     </body>
 </html>
