--- a/templates/confabulation/analysisView.html
+++ b/templates/confabulation/analysisView.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'confabulation/base.html' %}
 
 {% block title %} Analysis: {{analysis_point.name}}{% endblock %}
 {% block content %}
