--- a/templates/confabulation/participantView.html
+++ b/templates/confabulation/participantView.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'confabulation/base.html' %}
 {% block title %}{{participant.name}}{% endblock %}
 {% block content %}
 {% if participant %}
