move sidebar controls to navabar

--- a/templates/confabulation/base.html
+++ b/templates/confabulation/base.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+                {% block sidebar %}
+                {% include "sidebar.html" %}
+                {% endblock %}
 {% block navigation %}
 {% include '../navigation.html' %}
 {% endblock %}
