--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -60,6 +60,12 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Connections</a>
             </li>
+            <li class="nav-item">
+                    <button type="button" id="sidebarCollapse" class="btn btn-info btn-sm">
+                        <i class="fas fa-align-left"></i>
+                        <span>Hide sidebar</span>
+                    </button>
+
             </li>
         </ul>
     </div>
