--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Story Telling Database</a>
+    <a class="navbar-brand" href="/">Story Telling Database</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -7,14 +7,14 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Participants
                 </a>
 
                 <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
                     {% for ptype, list in navigation.participants.items %}
                     <li class="dropdown-submenu">
-                        <a  class="nav-item dropdown-item" tabindex="-1" href="#">{{ ptype}}</a>
+                        <a  class="nav-item dropdown-item" tabindex="-1" >{{ ptype}}</a>
                         <ul class="dropdown-menu">
                             {% for p in list %}
                             <li>
@@ -33,7 +33,7 @@
                 <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
                     {% for ptype, list in navigation.taxonomy.items %}
                     <li class="dropdown-submenu">
-                        <a  class="nav-item dropdown-item" tabindex="-1" href="#">{{ ptype}}</a>
+                        <a  class="nav-item dropdown-item" tabindex="-1" >{{ ptype}}</a>
                         <ul class="dropdown-menu">
                             {% for p in list %}
                             <li>
@@ -46,7 +46,7 @@
                 </ul>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Confabulation
                 </a>
                 <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
